--- a/docs.html
+++ b/docs.html
@@ -63,7 +63,7 @@
 	</div>
 </div>
 <div id='low'>
-	<a href="http://jupiterit.com">&copy; Jupiter Consulting - JavaScriptMVC Training and Support</a>
+  <a href="http://bitovi.com">&copy; Bitovi - JavaScriptMVC Training and Support</a>
 	<a class="api_links" href="http://javascriptmvc.com/docs/api.html#&who=api"></a>
 </div>
 <script type='text/javascript'>
@@ -75,7 +75,7 @@ DOCS_SRC_MAP = {
 };
 
 	DOCS_LOCATION = "jmvc/docs/" //adds searchData to this
-	JMVCDOC_TIMESTAMP = 1327349425799
+	JMVCDOC_TIMESTAMP = 1346781662988
 	COMMENTS_LOCATION = 'http://jmvcs3.disqus.com/embed.js';
 	steal = {
 		loaded: ['documentjs/jmvcdoc/production.css']
