--- a/builder.html
+++ b/builder.html
@@ -34,17 +34,17 @@
           <div class='clear'></div>
           <h2>Or download only what you need</h2>
           <p class='download' id='download-funcunit'>
-            <a class="download-link" href="https://github.com/jupiterjs/funcunit/zipball/v3.2.3"><strong>Download FuncUnit</strong>3.2.3 Production</a>
+            <a class="download-link" href="https://github.com/bitovi/funcunit/zipball/v3.2.3"><strong>Download FuncUnit</strong>3.2.3 Production</a>
             Web Application Testing. <a href="http://javascriptmvc.com/docs.html#!FuncUnit">Learn more</a>.
           </p>
           <div class='clear'></div>
           <p class='download' id='download-stealjs'>
-            <a class="download-link" href="https://github.com/jupiterjs/steal/zipball/v3.2.3"><strong>Download StealJS</strong>3.2.3 Production</a>
+            <a class="download-link" href="https://github.com/bitovi/steal/zipball/v3.2.3"><strong>Download StealJS</strong>3.2.3 Production</a>
             Manage dependencies, build fast pages, etc. <a href="http://javascriptmvc.com/docs/stealjs.html">Learn more</a>.
           </p>
           <div class='clear'></div>
           <p class='download' id='download-documentjs'>
-            <a class="download-link" href="https://github.com/jupiterjs/documentjs/zipball/v3.2.3"><strong>Download DocumentJS</strong>3.2.3 Production</a>
+            <a class="download-link" href="https://github.com/bitovi/documentjs/zipball/v3.2.3"><strong>Download DocumentJS</strong>3.2.3 Production</a>
             Powerfully easy documentation engine. <a href="http://javascriptmvc.com/docs/DocumentJS.html">Learn more</a>.
           </p>
           <div class='clear'></div>
@@ -77,7 +77,7 @@
           <ul>
             <li><a href='docs/stealjs.html'>StealJS</a> - Dependency management and a stupidly easy build tool.</li>
             <li><a href='docs/FuncUnit.html'>FuncUnit</a> - There's no better functional testing solution available. Write tests in jQuery syntax, run them via command line or browser.</li>
-            <li><a href='https://github.com/jupiterjs/jquerymx'>jQueryMX</a> - These plugins are the building blocks of large jQuery applications: model, view, controller, class, fixtures, and more.</li>
+            <li><a href='https://github.com/bitovi/jquerymx'>jQueryMX</a> - These plugins are the building blocks of large jQuery applications: model, view, controller, class, fixtures, and more.</li>
             <li><a href='docs/DocumentJS.html'>DocumentJS</a> - A JSDoc compliant tool that turns comments into a searchable documentation app.</li>
           </ul>
           <h4>Why JavaScriptMVC?</h4>
