--- a/contribute.html
+++ b/contribute.html
@@ -36,10 +36,10 @@
           <h2>Submitting Bugs</h2>
           <p>Bugs can be submitted to:</p>
           <ul>
-          <li><a href="http://github.com/jupiterjs/steal/issues">Steal bugs</a></li>
+          <li><a href="http://github.com/bitovi/steal/issues">Steal bugs</a></li>
           <li><a href="http://github.com/jupiterjs/jquerymx/issues">jQueryMX bugs</a></li>
-          <li><a href="http://github.com/jupiterjs/documentjs/issues">DocumentJS bugs</a></li>
-          <li><a href="http://github.com/jupiterjs/funcunit/issues">Funcunit bugs</a></li>
+          <li><a href="http://github.com/bitovi/documentjs/issues">DocumentJS bugs</a></li>
+          <li><a href="http://github.com/bitovi/funcunit/issues">Funcunit bugs</a></li>
           </ul>
           <h2>Hard Core Contributors</h2>
           <p>Grab a beer with the JavaScriptMVC team:</p>
