--- a/code.html
+++ b/code.html
@@ -35,7 +35,7 @@
           <p>We prefer you use Git. It's a great way to share changes with us and the community.  </p>
           <h2>Installing from Github</h2>
 		  <p>Download the JavaScriptMVC Install script for <a href='https://github.com/jupiterjs/javascriptmvc/raw/master/scripts/getjmvc'>Mac</a> 
-		  or <a href='https://github.com/jupiterjs/javascriptmvc/raw/master/scripts/getjmvc.bat'>Windows</a>.</p>
+		  or <a href='https://github.com/bitovi/javascriptmvc/raw/master/scripts/getjmvc.bat'>Windows</a>.</p>
 		  
 		  <p>Put this script where you want to install JavaScriptMVC's submodules (Steal, jQueryMX, FuncUnit, and DocumentJS).</p>
 		  
@@ -47,14 +47,14 @@
 		  <p>If you just want a certain repo, or you like doing things the hard way, here's how to get each project yourself:</p>
           <ul class='github'>
             <li>
-              <a href="http://github.com/jupiterjs/javascriptmvc">JavaScriptMVC</a>
+              <a href="http://github.com/bitovi/javascriptmvc">JavaScriptMVC</a>
               <code>git clone http://github.com/jupiterjs/javascriptmvc.git<br />
               git submodule init<br />
               git submodule update<br />
               cd <span class="normal">into each submodule and do</span> git checkout master</code>
             </li>
             <li>
-              <a href="http://github.com/jupiterjs/steal">Steal</a>
+              <a href="http://github.com/bitovi/steal">Steal</a>
               <code>git clone https://github.com/jupiterjs/steal.git</code>
             </li>
             <li>
@@ -62,11 +62,11 @@
               <code>git clone https://github.com/jupiterjs/jquerymx.git jquery</code>
             </li>
             <li>
-              <a href="http://github.com/jupiterjs/syn">Syn</a>
+              <a href="http://github.com/bitovi/syn">Syn</a>
               <code>git clone https://github.com/jupiterjs/syn.git</code>
             </li>
             <li>
-              <a href="http://github.com/jupiterjs/funcunit">FuncUnit</a>
+              <a href="http://github.com/bitovi/funcunit">FuncUnit</a>
               <code>git clone https://github.com/jupiterjs/funcunit.git<br />
               git submodule init<br />
               git submodule update<br />
@@ -74,7 +74,7 @@
 			  git checkout master</code>
             </li>
             <li>
-              <a href="http://github.com/jupiterjs/documentjs">DocumentJS</a>
+              <a href="http://github.com/bitovi/documentjs">DocumentJS</a>
               <code>git clone https://github.com/jupiterjs/documentjs.git</code>
             </li>
           </ul>
