--- a/docs.html
+++ b/docs.html
@@ -68,10 +68,10 @@
 </div>
 <script type='text/javascript'>
 DOCS_SRC_MAP = {
-		'funcunit' : 'https://github.com/jupiterjs/funcunit',
+		'funcunit' : 'https://github.com/bitovi/funcunit',
 		'jquery' : 'https://github.com/jupiterjs/jquerymx',
-		'steal' : 'https://github.com/jupiterjs/steal',
-		'documentjs' : 'https://github.com/jupiterjs/documentjs'
+		'steal' : 'https://github.com/bitovi/steal',
+		'documentjs' : 'https://github.com/bitovi/documentjs'
 };
 
 	DOCS_LOCATION = "jmvc/docs/" //adds searchData to this
