--- a/contribute.html
+++ b/contribute.html
@@ -10,7 +10,7 @@
       <div id='header'>
         <a href="index.html" id="logo"><img alt="JavascriptMVC" src="jmvc/images/logo.png" title="JavascriptMVC"/></a>
         <div id='download-box'>
-          <a href="https://github.com/downloads/jupiterjs/javascriptmvc/javascriptmvc-3.2.4.zip">Download v3.2.4</a>
+          <a href="https://github.com/downloads/bitovi/javascriptmvc/javascriptmvc-3.2.4.zip">Download v3.2.4</a>
           <a href="builder.html" id="download-builder">or go to the download builder</a>
         </div>
       </div>
@@ -48,7 +48,7 @@
             <li>
               <img alt="Justin" src="jmvc/images/team/justin.png"/>
               <h4>Justin Meyer</h4>
-              <p>Justin is a founder, and lead developer of JavaScriptMVC. During the day, he is the CEO of <a href="http://jupiterit.com">Jupiter Consulting</a>, a JavaScript consulting company. When not working on JavaScriptMVC, he's cheating with his other favorite framework - Ruby on Rails.</p>
+              <p>Justin is a founder, and lead developer of JavaScriptMVC. During the day, he is the CEO of <a href="http://bitovi.com">Bitovi</a>, a JavaScript consulting company. When not working on JavaScriptMVC, he's cheating with his other favorite framework - Ruby on Rails.</p>
               <div class='clear'></div>
             </li>
             <li>
