--- a/code.html
+++ b/code.html
@@ -48,14 +48,14 @@
           <ul class='github'>
             <li>
               <a href="http://github.com/bitovi/javascriptmvc">JavaScriptMVC</a>
-              <code>git clone http://github.com/jupiterjs/javascriptmvc.git<br />
+              <code>git clone http://github.com/bitovi/javascriptmvc.git<br />
               git submodule init<br />
               git submodule update<br />
               cd <span class="normal">into each submodule and do</span> git checkout master</code>
             </li>
             <li>
               <a href="http://github.com/bitovi/steal">Steal</a>
-              <code>git clone https://github.com/jupiterjs/steal.git</code>
+              <code>git clone https://github.com/bitovi/steal.git</code>
             </li>
             <li>
               <a href="http://github.com/jupiterjs/jquerymx">jQueryMX</a>
@@ -63,11 +63,11 @@
             </li>
             <li>
               <a href="http://github.com/bitovi/syn">Syn</a>
-              <code>git clone https://github.com/jupiterjs/syn.git</code>
+              <code>git clone https://github.com/bitovi/syn.git</code>
             </li>
             <li>
               <a href="http://github.com/bitovi/funcunit">FuncUnit</a>
-              <code>git clone https://github.com/jupiterjs/funcunit.git<br />
+              <code>git clone https://github.com/bitovi/funcunit.git<br />
               git submodule init<br />
               git submodule update<br />
               cd syn<br />
@@ -75,7 +75,7 @@
             </li>
             <li>
               <a href="http://github.com/bitovi/documentjs">DocumentJS</a>
-              <code>git clone https://github.com/jupiterjs/documentjs.git</code>
+              <code>git clone https://github.com/bitovi/documentjs.git</code>
             </li>
           </ul>
           <p>For more information on how to develop with Git check out <a href="docs.html#!developwithgit">Developing with Git</a>.</p>
